--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
                 <p>Climate <span>Change</span></p>
             </div>
             <div class="menu">
-                <a href="project.html">HOME</a>
+                <a href="index.html">HOME</a>
                 <a href="gallery.html">GALLERY</a>
                 <a href="contact.html">CONTACT US</a>
             </div>
             <div>
-                <form action="/project.html" method="get">
+                <form action="/index.html" method="get">
                     <input type="text" name="query" placeholder="Search..">
                     <button type="submit">Search</button>
                 </form>
