--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
                 <p>Climate <span>Change</span></p>
             </div>
             <div class="menu">
-                <a href="project.html">HOME</a>
+                <a href="index.html">HOME</a>
                 <a href="gallery.html">GALLERY</a>
                 <a href="contact.html">CONTACT US</a>
             </div>
