--- a/contact2.html
+++ b/contact2.html
@@ -25,7 +25,7 @@
                 <a href="contact.html">CONTACT US</a>
             </div>
             <div class="LOGIN">
-                <form action="/project.html" method="get">
+                <form action="/index.html" method="get">
                     <input type="text" name="query" placeholder="Search..">
                     <button type="submit">Search</button>
                 </form>
