--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
                 <a href="contact.html">CONTACT US</a>
             </div>
             <div>
-                <form action="/project.html" method="get">
+                <form action="/index.html" method="get">
                     <input type="text" name="query" placeholder="Search..">
                     <button type="submit">Search</button>
                 </form>
